1998-09-24  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-popup-menu.c (popup_marshal_func): Fixed stupid bug in the
	marshaller; I was using args[0] instead of the actual object.

Wed Sep 23 17:04:05 CEST 1998  Eckehard Berns  <eb@berns.prima.de>

	* gnome-stock.[ch]: expanded the functionality of
	gnome_stock_pixmap_widget to load GnomeStock widgets from files.
	(gnome_stock_pixmap_widget_at_size): new function. Loads a GnomeStock
	widget from a file and scales it using antializing.
	* stock_demo.c: added an example how to use the new functionality.

1998-09-21  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-canvas-line.c (gnome_canvas_line_set_arg): Avoid
	unnecessary reconfiguration, recalculation of bounds, and arrow
	polygon recomputation.

	* gnome-canvas-text.c (gnome_canvas_text_set_arg): Avoid
	unnecessary item reconfiguration and recalculation of bounds.

	* gnome-canvas-rect-ellipse.c (get_color_arg): New function to
	avoid a bit of duplicated code in gnome_canvas_re_get_arg().
	(set_outline_gc_width): Now the outline GC's line width is
	calculated here.
	(gnome_canvas_re_set_arg): Optimizations to avoid unnecessary
	item reconfiguration and recalculation of bounds.

	* gnome-app-helper.c (create_menu_item): Set separators as
	insensitive so that they cannot be selected.
	(create_pixmap): Look for pixmap files in the standard pixmap
	paths.  This was accidentally removed during the rewrite of
	GnomeAppHelper - my bad :-(

1998-09-21  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.[ch]: added view_changed signal, similar to child_changed.
	* gnome-mdi.c (app_set_view): update active_view and active_child to
	hold new values before emitting child_changed and/or view_changed
	signals and pass old child/view as signal handler arguments. this
	seems saner since the appropriate gnome-app is already updated to
	match the new view.

1998-09-20  Raja R Harinath  <harinath@cs.umn.edu>
